---
source: crates/ruff/src/rules/flake8_import_conventions/mod.rs
---
custom_banned_from.py:1:1: ICN003 Members of `logging.config` should not be imported explicitly
  |
1 | from logging.config import BaseConfigurator  # banned
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ ICN003
2 | from typing import Any, Dict  # banned
3 | from typing import *  # banned
  |

custom_banned_from.py:2:1: ICN003 Members of `typing` should not be imported explicitly
  |
2 | from logging.config import BaseConfigurator  # banned
3 | from typing import Any, Dict  # banned
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ ICN003
4 | from typing import *  # banned
  |

custom_banned_from.py:3:1: ICN003 Members of `typing` should not be imported explicitly
  |
3 | from logging.config import BaseConfigurator  # banned
4 | from typing import Any, Dict  # banned
5 | from typing import *  # banned
  | ^^^^^^^^^^^^^^^^^^^^ ICN003
6 | 
7 | from pandas import DataFrame  # banned
  |

custom_banned_from.py:5:1: ICN003 Members of `pandas` should not be imported explicitly
  |
5 | from typing import *  # banned
6 | 
7 | from pandas import DataFrame  # banned
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ ICN003
8 | from pandas import *  # banned
  |

custom_banned_from.py:6:1: ICN003 Members of `pandas` should not be imported explicitly
  |
6 | from pandas import DataFrame  # banned
7 | from pandas import *  # banned
  | ^^^^^^^^^^^^^^^^^^^^ ICN003
8 | 
9 | import logging.config  # ok
  |


